# workshop-challenge

./: README.md
.claude/: settings.local.json
Cerebro-agentico-eureka/: README.md
submissions/pablo-ler21/: .gitignore  ARCHITECTURE.md  PLAN.md  PR_DESCRIPTION.md  README.md  pyproject.toml
submissions/pablo-ler21/obsidian_vault/: _index.md
submissions/pablo-ler21/obsidian_vault/clientes/: 101_70-30.md  101_siempre-tipo-a.md  138_armar-factura-a-y-b.md  138_distribuidora-sur-si-mayor-500k-sino-sur-logistica.md  138_factura-electronica-b.md  201_siempre-a-alimentos-del-litoral.md  247_facturar-empresa-principal-si-supera-300k.md  247_solo-tipo-b.md  315_70-30.md  315_dos-facturas-distintas.md  389_empresa-del-grupo-norte.md  402_patagonia-sa.md  503_cuit-nuevo.md  503_tercio-y-dos-tercios.md  612_60-40.md  740_60-40.md
submissions/pablo-ler21/obsidian_vault/globales/: 50-50-tipo-a-50-50-tipo-b.md  50-50.md  factura-a-responsable-inscripto.md  factura-a-y-b.md  factura-b-consumidor-final.md  hacer-50-50.md
submissions/pablo-ler21/obsidian_vault/pendientes-revision/: compilation-failed-empresa-grupo.md  distribuidora-sur-condicional-a1b2c3d4.md
submissions/pablo-ler21/scripts/: seed_demo.py  simulate_traffic.py  watch_vault.py
submissions/pablo-ler21/src/second_brain/: compiler.py  db.py  engine.py  invalidator.py  main.py  models.py  normalizer.py  obsidian_writer.py  promoter.py  watcher.py
submissions/pablo-ler21/tests/: test_compiler.py  test_engine.py  test_models.py  test_normalizer.py  test_obsidian.py  test_promotion.py
(+21 files in other folders)
