[project]
name = "second-brain-galo"
version = "0.1.0"
description = "Sistema de memoria para agente de IA — Second Brain Challenge"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: tests de performance (correr con -m slow)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain"]
